Bug 358943 - Sequence line color does not follow object widget color settings
Summary: Sequence line color does not follow object widget color settings
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16.2 (KDE Applications 15.04.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-03 09:08 UTC by Ralf Habacker
Modified: 2016-02-03 11:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.18.2 (KDE Applications 15.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-02-03 09:08:36 UTC
The color of object widgets in sequence diagrams could be changed through the related property dialog. Unfortunally changing the color of an object widget does not change the color of the related sequence line.


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. create new sequence diagram, add an object
3. Double click on object widget, change color and press ok two times.



Actual Results:  
The Color of object widget has been changed, but the color of the sequence line not.

Expected Results:  
The color of the sequence line should be changed too.
Comment 1 Ralf Habacker 2016-02-03 09:34:08 UTC
Git commit 8ffad46f0aefd9f4d9a6a6c4546f2386e5773dc9 by Ralf Habacker.
Committed on 03/02/2016 at 09:33.
Pushed by habacker into branch 'Applications/15.12'.

Fix 'Sequence line color do not follow object widget color settings'.

Because the real apply is done with UMLWidget::setLineColorCmd() called
by the undo framework, it is required to make UMLWidget::setLineColorCmd()
virtual to be able to apply line color changes to the related widget.
FIXED-IN:2.18.2 (KDE Applications 15.12.2)

M  +14   -0    umbrello/umlwidgets/objectwidget.cpp
M  +2    -0    umbrello/umlwidgets/objectwidget.h
M  +1    -1    umbrello/umlwidgets/umlwidget.h

http://commits.kde.org/umbrello/8ffad46f0aefd9f4d9a6a6c4546f2386e5773dc9