Fix 'Sequence line color do not follow object widget color settings'.

Because the real apply is done with UMLWidget::setLineColorCmd() called
by the undo framework, it is required to make UMLWidget::setLineColorCmd()
virtual to be able to apply line color changes to the related widget.


BUG:358943
FIXED-IN:2.18.2 (KDE Applications 15.12.2)